<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPengaduan2">

    <EditText
        android:id="@+id/edt_laporan2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="@font/nunitosans_medium"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_dalam_rangka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunitosans_medium"
        android:text="@string/ajuan4"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_laporan2" />

    <TextView
        android:id="@+id/tvPemeriksaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunitosans_medium"
        android:text="@string/ajuan5"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dalam_rangka" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunitosans_medium"
        android:text="@string/ajuan6"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPemeriksaan" />

    <TextView
        android:id="@+id/tvTuliskanlaporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunitosans_medium"
        android:text="Tulis Laporan atau Aduan Secara Jelas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_laporan2" />

    <TextView
        android:id="@+id/tvmedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="Media"
        android:fontFamily="@font/nunitosans_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTuliskanlaporan" />

    <EditText
        android:id="@+id/edt_input_media"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/nunitosans_semibold"
        android:gravity="bottom"
        android:background="@drawable/rounded_edittext_bg"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="jfsfksn.png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvmedia" />

    <ImageView
        android:layout_width="369dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/lampu_rusak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_input_media" />

    <TextView
        android:id="@+id/tvSertakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunitosans_medium"
        android:text="Sertakan Foto atau Video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_media" />

    <Button
        android:id="@+id/btn_kirim_pengaduan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_button"
        android:text="Kirim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSertakan" />


</androidx.constraintlayout.widget.ConstraintLayout>




